--- a/app/src/main/res/drawable/ic_mihon_splash.xml
+++ b/app/src/main/res/drawable/ic_mihon_splash.xml
@@ -3,6 +3,6 @@
     <item
         android:width="72dp"
         android:height="72dp"
-        android:drawable="@drawable/ic_mihon"
+        android:drawable="@drawable/ic_gihon_white"
         android:gravity="center" />
 </layer-list>
